# QT_Demo

CarDriverSys/: CMakeLists.txt  qml.qrc
CarDriverSys/headers/: musicplayer.h
CarDriverSys/qml/: main.qml
CarDriverSys/qml/Common/: Config.qml  Skin.qml
CarDriverSys/src/: main.cpp  musicplayer.cpp
CarDriverSystem/: CMakeLists.txt  CMakePresets.json  main.cpp
CarDriverSystem/Moudules/MusicPlayer/: CMakeLists.txt  MusicPlayer.cpp  qmldir
CarDriverSystem/Moudules/Settings/: CMakeLists.txt  SettingsModel.cpp  qmldir
CarDriverSystem/Moudules/SystemUI/: CMakeLists.txt  SystemInfo.cpp  qmldir
Notepad/: CMakeLists.txt  NotepadPage.qml  Toolbar.qml  main.cpp  utils.js
cardriver/: CMakeLists.txt
